--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "redux-promise": "^0.6.0",
     "regenerator-runtime": "^0.14.1",
     "rehype-external-links": "^2.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "1.0.0",
     "reselect": "^5.1.0",
     "resize-observer-polyfill": "^1.5.1",
